syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/theme-ce/simple-shop/pb";

message UpdateUserRequest {
    string username = 1;
    optional string first_name = 2;
    optional string last_name = 3;
    optional string email = 4;
    optional string password = 5;
    optional string address = 6;
}
 
message UpdateUserResponse {
    User user = 1;
}